--- a/site/page.htm
+++ b/site/page.htm
@@ -22,8 +22,8 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
+          <a class="nav-link active" href="#./page.htm">Home</a>
+          <a class="nav-link" href="./contactForm.htm">Add Listing</a>
         </nav>
       </div>
     </div>
@@ -47,10 +47,10 @@
             <p class="blog-post-meta">Full Time, Location</p>
 
             <h5>Job Description</h5>
-            <p>Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text</p>
-            <p>Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text</p>
-            
-            <p>Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text</p>
+            <p>Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text
+            Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text
+
+            Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text Sample Text</p>
             
             <hr>
             <h5>Salary</h5>
@@ -74,11 +74,6 @@
           </div><!-- /.blog-post -->
 
 
-          <nav class="blog-pagination">
-            <a class="btn btn-outline-primary" href="#">Older</a>
-            <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-          </nav>
-
         </div><!-- /.blog-main -->
 
         <div class="col-sm-4 blog-sidebar">
@@ -98,7 +93,7 @@
     </div><!-- /.container -->
 
     <footer class="blog-footer">
-      <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>Job Board for <a href="http://msawest.net/">MSA West</a> by <a href="https://www.facebook.com/umohammady">Umair</a>.</p>
       <p>
         <a href="#">Back to top</a>
       </p>
