--- a/site/page.htm
+++ b/site/page.htm
@@ -22,7 +22,7 @@
     <div class="blog-masthead">
       <div class="container">
         <nav class="nav blog-nav">
-          <a class="nav-link active" href="#./page.htm">Home</a>
+          <a class="nav-link active" href="#">Home</a>
           <a class="nav-link" href="./contactForm.htm">Add Listing</a>
         </nav>
       </div>
